syntax = "proto3";

package services;

option go_package = "./services";

service User {
	rpc Login(UserLoginReq) returns (UserInfoRes) {}
	rpc Register(UserRegisterReq) returns (UserInfoRes) {}
}

message UserModel {
	uint32 id = 1;
	int64 createdAt = 2;
	int64 updatedAt = 3;
	int64 deletedAt = 4;
	string username = 5;
}

message UserLoginReq {
	string username = 1;
	string password = 2;
}

message UserRegisterReq {
	string username = 1;
	string password = 2;
	string passwordConfirm = 3;
}

message UserInfoRes {
	UserModel userinfo = 1;
	uint32 code = 2;
}
